# AD

./: ppc.py
2024/Stud/final/approve_me/: docker-compose.yml
2024/Stud/final/blinbin/: .dockerignore
2024/Stud/final/doom/: docker-compose.yml
2024/Stud/final/sploits/: sploit.py
2024/Stud/final/zbnk/: .env
2024/Stud/quals/FORENSIC/: README.MD
2024/Stud/quals/misc/: solve.py
2024/Stud/quals/web/: docker-compose.yml
2024/trains/dinoex/: docker-entrypoint.sh
2024/trains/easy_forms/: Dockerfile.backend  backend-entry.sh
2024/trains/easy_forms/conf/: nginx.conf
2024/trains/easy_forms/src/: .env
2025/ctfcup-2025-public/: LICENSE  README.md
2025/ctfcup-2025-public/checkers/archive/: Makefile  archive.checker.py  archive_lib.py  library_generator.cpp  requirments.txt
2025/ctfcup-2025-public/checkers/prototype/: check_logic_async.py  checker.py  cocktail_recipes.py  common.py  common_async.py  get_logic_async.py  load_test.py  put_logic_async.py  requests_utils_async.py  requirements.txt
AD/final/final/: README.md
AD/final/services/dnser/: init.sql
MCTF/Junior/services/dnser/src/: CMakeLists.txt  main.c
Stud/web/Loose Lottery/: brute.py
trains/dinoex/: docker-compose.yaml
trains/dinoex/config/: database.rb  database.yml
trains/easy_forms/: docker-compose.yaml
trains/easy_forms/src/: composer.json
trains/easy_forms/static/: 200.html  index.html
trains/klassika/: sploit.py
trains/klassika/templates/: choose_game.html  game_1.html  game_3.html  login.html  navigation.html
trains/quoter/: migratus.clj  package-lock.json
(+1039 files in other folders)
